@@ -15,7 +15,12 @@ export QMAKE_CXXFLAGS_DEBUG := $(CXXFLAGS)
 export QMAKE_LFLAGS_RELEASE := $(LDFLAGS)
 export QMAKE_LFLAGS_DEBUG := $(LDFLAGS)
 export QT_SELECT := qt5
-export LLVM_INSTALL_DIR := $(shell if [ -d /usr/lib/llvm-3.9 ]; then echo /usr/lib/llvm-3.9; fi)
+
+LLVM_PREFIX := $(shell grep LLVM_PREFIX /usr/include/llvm/Config/llvm-config.h | sed 's/.*\(\/usr\/lib\/llvm-[0-9].[0-9]\).*/\1/g')
+
+ifneq ($(LLVM_PREFIX),)
+    export LLVM_INSTALL_DIR := $(LLVM_PREFIX)
+endif
 
 # Upstream changelog
 upstream_changes := $(wildcard dist/changes-*)
