@@ -8,6 +8,7 @@ qtcreator (4.4.1-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Switch to unversioned llvm-dev and libclang-dev, see if we can keep this
     dependencies this way (Closes: #873414).
+    - Export LLVM_INSTALL_DIR without harcoding the version.
   * Switch to compat 10 which uses parallel building by default.
     - Depend on debhelper >= 10.
 
